feat: home header

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "dohub",
-    "slug": "dohub",
+    "name": "anymoney",
+    "slug": "anymoney",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
