--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-svg": "^15.9.0",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "expo-linear-gradient": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
